<resources>
    <string name="app_name">Login App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="register_message">Register Message</string>
    <string name="login_message">login_message</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="text_and_link" />
    <string name="operations">Operations</string>
    <string name="calculate_ans_convert">Calculate and Convert</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="swipe">Swipe Left Go Back or Right To Next</string>
    <string name="texturl">textUrl</string>
    <string name="textUrl" />
    <string name="swipe_right_to_go_back">Swipe Right To Go Back</string>
    <string name="swipt_to_left_next_page">Swipe Left To Next</string>

</resources>